tests/update/attribute_id_multiple/test.stderr
error: Only one field can be annotated with `#[crud_id]`
 --> tests/update/attribute_id_multiple/test.rs:8:5
  |
8 | /     #[crud_id]
9 | |     name: String,
  | |________________^

error[E0599]: no method named `update` found for struct `Test` in the current scope
  --> tests/update/attribute_id_multiple/test.rs:21:6
   |
5  |   struct Test {
   |   ----------- method `update` not found for this struct
...
17 |       let _result = Test {
   |  ___________________-
18 | |         id: 1,
19 | |         name: "Debbie".to_string(),
20 | |     }
21 | |     .update(&pool)
   | |     -^^^^^^ method not found in `Test`
   | |_____|
   |
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `update`, perhaps you need to implement one of them:
           candidate #1: `digest::Update`
           candidate #2: `digest::digest::Digest`
           candidate #3: `digest::digest::DynDigest`
